--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 .idea/
 __init__.py
 venv/*
+HomeworkProjects/Unit1/Lesson3/Project6/Readme_file.docx
+HomeworkProjects/Unit1/Lesson3/Project6/WELLCOME_APCspend2013_forThinkful.xlsx
+HomeworkProjects/Unit1/Lesson4/.Rhistory
+HomeworkProjects/Unit1/Unit1_Catchup.xlsx
